--- a/public/css/info.css
+++ b/public/css/info.css
@@ -1,10 +1,7 @@
-.login span{
-	font-size: 30px;
-	text-align: center;
+.info label{
 	font-weight: bold;
-	margin-bottom: 20px;
 }
-.login{
+.info{
 	padding: 50px 60px 60px 60px;
 	background-color: white;
 	border: #ff5200 thin solid; 
@@ -17,7 +14,16 @@
 	background-color: rgba(0,0,0,0)!important;
 	padding-top: 0!important;
 }
-.btn-login{
-	margin-top: 30px;
-	width: 100px;
+.info h1{
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 30px;
+	text-align: center;
+}
+.info .btn{
+	margin-top: 25px;
+	width: 200px;
+}
+.info span{
+	float: right;
 }
