--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,5 +1,5 @@
 body{
-	background-color: rgba(0,0,0,0.05);
+	background-color: rgba(0,0,0,0.07);
 }
 header{
 	height: 150px;
@@ -20,17 +20,17 @@ header{
 	padding-top: 25px;
 	color: rgb(255,106,2);
 	font-family: Crass;
-    padding-left: 50px;
+    padding-left: 60px;
 }
 .title p{
 	color: white;
-	padding-left: 50px;
-	font-size: 16px;
+	padding-left: 60px;
+	font-size: 15px;
 }
 #contact{
 	position: absolute;
 	right: 10px;
-	padding-top: 10px;
+	padding-top: 20px;
 }
 #contact ul li{
 	padding-top: 10px;
@@ -45,10 +45,11 @@ header{
 	border-top-left-radius: 0px;
 }
 .input-group{
-	padding-top: 50px;
+	padding-top: 40px;
 }
 nav{
 	background-color: rgb(255,106,2)!important;
+	z-index: 1000;
 }
 .header{
 	background-color: #ff5200;
@@ -64,11 +65,54 @@ nav{
 }
 .content{
 	background-color: white;
-	height: 1050px;
+	height: 1060px;
 	margin-top: 20px;
 	padding-top: 20px;
 }
 .list-group{
 	padding-top: 20px;
 	padding-left: 30px;
+}
+.text{
+	color: rgb(255,106,2);
+	padding-top: 10px;
+}
+.promptTextBubble{
+	background-color: #f1f0f0;
+	border-radius: 1.3em;
+	display: inline-block;
+	font-size: 11pt;
+	padding: 8px 12px;
+}
+.mess{
+	width: 392px;
+	height: 205px;
+    background-color: #fff;
+    border-radius: 12px;
+    bottom: 0;
+    box-shadow: 0 1pt 12pt rgba(0, 0, 0, .25);
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 1000;  
+}
+.subButtonText {
+    color: rgba(0, 0, 0, .45);
+    line-height: 20px;
+    padding-top: 4px;
+    text-align: center;
+    font-size: 12px;
+}
+.btn-mess{
+	padding-top: 12px;
+	padding-left: 35px;
+}
+.btn-mess a{
+	width: 275px; 
+	border-radius: 12px;
+}
+.name{
+	color: rgba(0, 0, 0, .45);
+	font-size: 12px; 
+	padding-left: 75px;
 }
