--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+@import url('https://fonts.googleapis.com/css?family=Acme|Concert+One|Cabin+Sketch|Faster+One|Source+Sans+Pro&display=swap');
 
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
