--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
+<script src="https://kit.fontawesome.com/a7e8114d11.js" crossorigin="anonymous"></script>
 
 /*!
  * Bootstrap v4.1.3 (https://getbootstrap.com/)
